Jupyter notebook, py env

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+.ipynb_checkpoints
+env
 
 # Created by 
 https://www.gitignore.io/api/c,c++,cuda,cmake,linux,clion,macos,windows,visualstudio,visualstudiocode
