--- a/logreg/requirements.txt
+++ b/logreg/requirements.txt
@@ -37,6 +37,7 @@ python-dateutil==2.7.5
 pytz==2018.7
 pyzmq==17.1.2
 qtconsole==4.4.3
+scipy==1.1.0
 Send2Trash==1.5.0
 six==1.11.0
 terminado==0.8.1
