--- a/.gitignore
+++ b/.gitignore
@@ -601,3 +601,4 @@ ASALocalRun/
 
 # End of 
 https://www.gitignore.io/api/c,c++,cuda,cmake,linux,clion,macos,windows,visualstudio,visualstudiocode
+lin_reg_house_cuda.py
